@@ -10,8 +10,8 @@
     android_packages:
       - "tools"
       - "platform-tools"
-      - "build-tools;28.0.3"
-      - "platforms;android-28"
+      - "build-tools;30.0.3"
+      - "platforms;android-30"
     android_sdk_download:
       url : "https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip"
       sha256_checksum: '92ffee5a1d98d856634e8b71132e8a95d96c83a63fde1099be3d86df3106def9'
