@@ -3,6 +3,7 @@
  - issue #185 : Fix Hebrew translation not being displayed
  - simplify string placeholder notation app_website string
  - Fix Indonesian language code (symlink id -> in)
+ - issue ##184 : build against Android SDK 11.0 (API 30)
 
  v0.7 (released on 02Jan2021)
  - issue #73 : add form to manually enter a location, thanks to Timotheos Constambeys
